--- a/esp32/netmcu/Makefile
+++ b/esp32/netmcu/Makefile
@@ -2,10 +2,13 @@
 # This is a project Makefile. It is assumed the directory this Makefile resides in is a
 # project subdirectory.
 #
-.PHONY: xxx
+.PHONY: xxx win_copy
 xxx :
 	$(MAKE) -C main/userio/http_data
 	$(MAKE) all
+	
+win_copy: all
+	./win_cp.sh
 
 PROJECT_NAME := netmcu
 
