--- a/esp32/netmcu/.cproject
+++ b/esp32/netmcu/.cproject
@@ -139,8 +139,6 @@
                 				
                 <buildCommand>win_cp.sh</buildCommand>
                 				
-                <buildArguments/>
-                				
                 <stopOnError>true</stopOnError>
                 				
                 <useDefaultCommand>false</useDefaultCommand>
@@ -176,6 +174,22 @@
                 <stopOnError>true</stopOnError>
                 				
                 <useDefaultCommand>true</useDefaultCommand>
+                				
+                <runAllBuilders>true</runAllBuilders>
+                			
+            </target>
+            			
+            <target name="flash" path="" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
+                				
+                <buildCommand>make</buildCommand>
+                				
+                <buildArguments>-s -j flash</buildArguments>
+                				
+                <buildTarget/>
+                				
+                <stopOnError>true</stopOnError>
+                				
+                <useDefaultCommand>false</useDefaultCommand>
                 				
                 <runAllBuilders>true</runAllBuilders>
                 			
