--- a/esp32/netmcu/.settings/org.eclipse.cdt.core.prefs
+++ b/esp32/netmcu/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,9 @@
 eclipse.preferences.version=1
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.2000868813.1475941662/BATCH_BUILD/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.2000868813.1475941662/BATCH_BUILD/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.2000868813.1475941662/BATCH_BUILD/value=1
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.2000868813.1475941662/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.2000868813.1475941662/appendContributed=true
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.2000868813/BATCH_BUILD/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.2000868813/BATCH_BUILD/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.2000868813/BATCH_BUILD/value=1
