web: stm32 reset. reverse stm32 boot pin

--- a/esp32/netmcu/.cproject
+++ b/esp32/netmcu/.cproject
@@ -205,7 +205,9 @@
                 				
                 <buildCommand>make</buildCommand>
                 				
-                <buildArguments>-s -j  esp32poe</buildArguments>
+                <buildArguments>-s -j 6 esp32poe</buildArguments>
+                				
+                <buildTarget/>
                 				
                 <stopOnError>true</stopOnError>
                 				
