--- a/esp32/netmcu/components/app/CMakeLists.txt
+++ b/esp32/netmcu/components/app/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(srcs esp32/ota.c esp32/main.c rtc.c esp32/unity_setup.c watch_dog.c esp32/kvstore.c) 
+set(srcs esp32/ota.c esp32/main.c esp32/main_setup.c esp32/main_loop.c rtc.c esp32/unity_setup.c watch_dog.c esp32/kvstore.c) 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMCU_ESP32")
 
@@ -15,6 +15,6 @@ idf_component_register(
     INCLUDE_DIRS "./include" ../.. 
     PRIV_INCLUDE_DIRS . "./include/app" ../../main
     REQUIRES userio main 
-    PRIV_REQUIRES storage net
+    PRIV_REQUIRES storage net misc_time
                   esp_https_ota
 )
