Remove dependencies to global config

--- a/esp32/netmcu/components/http_server_content/webapp/Makefile
+++ b/esp32/netmcu/components/http_server_content/webapp/Makefile
@@ -1,7 +1,7 @@
 all: tfmcu.html tfmcu.js
 
 HTMLMIN ?= ~/.local/bin/htmlmin
-JSMIN ?= python -m jsmin
+JSMIN ?= /usr/bin/python -m jsmin
 
 SED_OPTS_HTML =  -e 's/tfmcu_dev.js/\/tfmcu.js/'
 SED_OPTS_JS =
