--- a/esp32/netmcu/.project
+++ b/esp32/netmcu/.project
@@ -3,6 +3,7 @@
 	<name>netmcu</name>
 	<comment></comment>
 	<projects>
+		<project>components-mcu</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -23,4 +24,15 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1585861114989</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-components-mcu</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
