--- a/esp32/netmcu/components/http_server_content/CMakeLists.txt
+++ b/esp32/netmcu/components/http_server_content/CMakeLists.txt
@@ -11,6 +11,6 @@ idf_component_register(
     INCLUDE_DIRS . "./include"
     PRIV_INCLUDE_DIRS "./include/http_server_content"
     REQUIRES ""
-    PRIV_REQUIRES cli_app config misc net_http_server userio
+    PRIV_REQUIRES cli_app config misc userio
     EMBED_TXTFILES "./webapp/tfmcu.html" "./webapp/tfmcu.js"
    )
