Share stm32 component

--- a/esp32/netmcu/.cproject
+++ b/esp32/netmcu/.cproject
@@ -383,6 +383,8 @@
                 				
                 <buildCommand>win_cp.sh</buildCommand>
                 				
+                <buildArguments/>
+                				
                 <stopOnError>true</stopOnError>
                 				
                 <useDefaultCommand>false</useDefaultCommand>
@@ -547,6 +549,8 @@
                 				
                 <buildCommand>make</buildCommand>
                 				
+                <buildArguments/>
+                				
                 <buildTarget>esp32-clean</buildTarget>
                 				
                 <stopOnError>true</stopOnError>
@@ -560,6 +564,8 @@
             <target name="esp32-flash" path="" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
                 				
                 <buildCommand>make</buildCommand>
+                				
+                <buildArguments/>
                 				
                 <buildTarget>esp32-flash</buildTarget>
                 				
@@ -575,6 +581,8 @@
                 				
                 <buildCommand>make</buildCommand>
                 				
+                <buildArguments/>
+                				
                 <buildTarget>esp32-flash-ocd</buildTarget>
                 				
                 <stopOnError>true</stopOnError>
@@ -588,6 +596,8 @@
             <target name="esp32-flash-app-ocd" path="" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
                 				
                 <buildCommand>make</buildCommand>
+                				
+                <buildArguments/>
                 				
                 <buildTarget>esp32-flash-app-ocd</buildTarget>
                 				
@@ -603,6 +613,8 @@
                 				
                 <buildCommand>make</buildCommand>
                 				
+                <buildArguments/>
+                				
                 <buildTarget>esp32-wlan esp32-flash-app-ocd</buildTarget>
                 				
                 <stopOnError>true</stopOnError>
@@ -617,9 +629,23 @@
                 				
                 <buildCommand>make</buildCommand>
                 				
-                <buildArguments/>
-                				
                 <buildTarget>esp32-fullclean</buildTarget>
+                				
+                <stopOnError>true</stopOnError>
+                				
+                <useDefaultCommand>false</useDefaultCommand>
+                				
+                <runAllBuilders>true</runAllBuilders>
+                			
+            </target>
+            			
+            <target name="esp32-cellar" path="" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
+                				
+                <buildCommand>make</buildCommand>
+                				
+                <buildArguments>V=1</buildArguments>
+                				
+                <buildTarget>esp32-cellar</buildTarget>
                 				
                 <stopOnError>true</stopOnError>
                 				
